# zsh_env

./: .gitignore  .shellspec  .sops.yaml  README.md  aliases.local.zsh.example  aliases.zsh  completions.zsh  completions.zsh.bak  config.zsh.example  functions.zsh  hooks.zsh  install.sh  plugins.zsh  rc.zsh  uninstall.sh  variables.zsh
.github/: release.yml
atuin/: config.toml
boulanger/: settings.xml.enc
cli/: Cargo.toml
cli/src/: config.rs  main.rs
cli/src/cmd/: audit.rs  bench.rs  context.rs  doctor.rs  mod.rs  modules.rs  mr_fanout.rs  project.rs  secrets.rs  sync.rs  theme.rs  tui_config.rs  update.rs
core/: _zsh-env-cli  admin.zsh  aliases.zsh  auto_update.zsh  commands.zsh  completions.zsh  hooks.zsh  loader.zsh  migrate.zsh  setup.zsh  sync.zsh  theme.zsh  ui.zsh  variables.zsh
docs/: ROADMAP.md  plan-migration-mise.md
env.d/: README.md
env.d.example/: docker.zsh  editor.zsh  gitlab.zsh  java.zsh  kube.zsh  sops.zsh  ssl.zsh  work.zsh
functions/: ai_tokens.zsh  auto_update.zsh  boulanger_context.zsh  check_env_deps.zsh  docker_utils.zsh  extract.zsh  fkill.zsh  git_bulk.zsh  git_change_author.zsh  git_root.zsh  gitlab_logic.sh  gitlab_logic.zsh  kube_config.zsh  mise_hooks.zsh  net_utils.zsh  nvm_auto.zsh  project_switcher.zsh  sdk_sync.zsh  sdk_wrapper.zsh  security_audit.zsh  ssh_manager.zsh  test_runner.zsh  tmux_manager.zsh  ui.zsh  utils.zsh  work_context.zsh  zsh_env_commands.zsh  zsh_env_completions.zsh  zsh_profile.zsh
ghostty/: config
k9s/: hotkeys.yaml  plugins.yaml
kube/: config.minimal.sops.yml
lazygit/: config.yml
(+172 files in other folders)
