[package]
name = "zsh-env-cli"
version = "3.0.0"
edition = "2021"
description = "CLI companion for zsh_env"

[dependencies]
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
toml = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
colored = "2"
regex = "1"
ignore = "0.4"
chrono = "0.4"
ratatui = "0.29"
crossterm = "0.28"

[profile.release]
strip = true
lto = true
